--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,155 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+   
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body{
+  /* background-color:lightblue  ; */
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.box{
+  width: 80%;
+  margin: auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.row{
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
-.card {
-  padding: 2em;
+img{
+  width: 100%;
 }
 
-.read-the-docs {
-  color: #888;
+.start-row{
+  width: 100%;
+  height: 100vh;
+  /* background-color:cornflowerblue; */
+
+}
+
+.start-row .col{
+  height: 100%;
+  flex-direction: column;
+  /* background-color: aqua; */
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+
+}
+
+.start-row .col-1{
+  width: 60%;
+  /* align-items: center; */
+}
+
+.start-row .col-2{
+  width: 40%;
+}
+
+
+.start-row h1{
+
+  font-size: 3.5rem;
+  text-align: left;
+  
+}
+
+.start-row button{
+  font-size: 1.5rem;
+ width: min-content;
+  
+}
+
+.start-row img{
+  width: 80%;
+}
+
+.total-score{
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.total-score h2{
+  font-size: 3rem;
+}
+
+.total-score p{
+  font-size: 1.5rem;
+}
+
+.play-box{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 40px 0;
+
+}
+
+.num-select{
+  width: 70%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: end;
+
+}
+
+.num-select p {
+  width: 100%;
+  text-align: end;
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+
+.num-box, .select-box{
+  padding: 20px;
+  background-color: black;
+  width: 60px;
+  height: 60px;
+  margin: 10px;
+  
+ border-radius: 5px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.select-box{
+ background-color: rgb(255, 255, 255);
+ border:2px solid #000;
+ color:black;
+
+}
+
+.roll-box{
+  height: calc(100vh - 180px);
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.roll-box p{
+  font-size: 1.2rem;
+  padding: 20px;
+  font-weight: 600;
+}
+.dice-img{
+  width: 200px;
+  cursor: pointer;
+
 }
