--- a/src/App.css
+++ b/src/App.css
@@ -157,3 +157,19 @@ img{
 .error{
   color: red;
 }
+
+
+
+@media only screen and (max-width: 600px) {
+
+  .total-score, .num-select{
+    width: 100%;
+    /* align-items: center; */
+  }
+  
+ 
+  
+
+
+
+}
