--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,11 @@ body{
   /* background-color:lightblue  ; */
 }
 
+button{
+  cursor: pointer;
+}
+
+
 .box{
   width: 80%;
   margin: auto;
@@ -25,6 +30,39 @@ body{
 img{
   width: 100%;
 }
+
+.black-btn{
+
+  padding: 10px 20px;
+  background-color: black;
+  color: white;
+  min-width: 220px;
+  border-radius: 5px;
+
+}
+
+.black-btn:hover{
+scale:0.95;
+
+}
+
+.white-btn{
+  padding: 10px;
+  background-color: white;
+  color: rgb(0, 0, 0);
+  min-width: 200px;
+  border: 2px solid;
+  border-radius: 5px;
+  margin-top: 20px;
+  transition: 0.7s all;
+}
+
+.white-btn:hover{
+  background-color: black;
+  color: white;
+
+}
+
 
 .start-row{
   width: 100%;
@@ -135,7 +173,7 @@ img{
 }
 
 .roll-box{
-  height: calc(100vh - 180px);
+  padding: 30px 0 20px 0;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -157,7 +195,10 @@ img{
 .error{
   color: red;
 }
-
+.reset-btn{
+  margin: auto;
+  font-size:1.2rem;
+}
 
 
 @media only screen and (max-width: 600px) {
@@ -165,7 +206,7 @@ img{
   .total-score, .num-select, .start-row .col-1, .start-row .col{
     width: 100%;
     height: fit-content;
-    /* align-items: center; */
+    align-items: center;
   }
   .row {
 
