--- a/src/App.css
+++ b/src/App.css
@@ -57,11 +57,11 @@ scale:0.95;
   transition: 0.7s all;
 }
 
-.white-btn:hover{
+/* .white-btn:hover{
   background-color: black;
   color: white;
 
-}
+} */
 
 
 .start-row{
